--- a/MVC_GerenciadorDeConteudo/Views/Home/Index.cshtml
+++ b/MVC_GerenciadorDeConteudo/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <h1>Cadastrar Páginas</h1>
     <div>
-        <a href="/paginas" class="btn-default">Ir para cadastro de paginas</a>
+        <button class="btn btn-default"><a href="/paginas">Ir para cadastro de paginas</a></button>
     </div>
 </div>
 
