--- a/MVC_GerenciadorDeConteudo/Views/Paginas/Index.cshtml
+++ b/MVC_GerenciadorDeConteudo/Views/Paginas/Index.cshtml
@@ -4,22 +4,29 @@
     List<Business.Pagina> paginas = ViewBag.Paginas;
 }
 
-
 <div class="jumbotron">
-    <h1>Páginas</h1>
+    <h3>Páginas</h3>
+    <div>
+        <button class="btn btn-default"><a href="paginas/novo">Novo</a></button>
+  
+    </div>
     <table class="table">
         <tr>
             <td>Id</td>
             <td>Nome</td>
             <td>Data</td>
+            <td></td>
+            <td></td>
         </tr>
         @foreach (var p in paginas)
         {
-            <tr>
-            <td>@p.Id:</td>
-            <td>@p.Name:</td>
-            <td>@p.Data:</td>
-            </tr>
+    <tr>
+        <td>@p.Id</td>
+        <td>@p.Name</td>
+        <td>@p.Data</td>
+        <td><a href="/paginas/@p.Id/editar" class="btn btn-primary">Alterar</a></td>
+        <td><a href="/paginas/@p.Id/excluir" class="btn btn-danger" onclick="ValidaExclusao(@p.Id, event)">Excluir</a></td>
+    </tr>
         }
     </table>
 </div>
