--- a/MVC_GerenciadorDeConteudo/Views/Paginas/Editar.cshtml
+++ b/MVC_GerenciadorDeConteudo/Views/Paginas/Editar.cshtml
@@ -1,18 +1,20 @@
 ﻿
 @{
-    ViewBag.Title = "Editar Página";
-    Business.Pagina pagina = ViewBag.Pagina;
+    ViewBag.Title = "Preview";
+    Business.Pagina paginas = ViewBag.Pagina;
 }
 
+<script src="https://cdn.tiny.cloud/1/nxscf9mmdg1krjhyld3mc08qp1apfx5wnlt5ak5jiciqk21e/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+<script>tinymce.init({ selector: 'textarea' });</script>
 
 <div class="jumbotron">
     <h3>Páginas</h3>
     <div>
-        <button class="btn btn-default"><a href="/paginas">Voltar</a></button>
+        <a href="/paginas" class="btn btn-primary">Voltar</a>
 
     </div>
     <br />
-  
+
     <form action="/paginas/@pagina.Id/alterar" method="post">
         <div class="form-group">
             <label for="nome">Nome:</label>
@@ -20,6 +22,7 @@
 
         </div>
         <div class="form-group">
+
             <label for="conteudo">Conteúdo:</label>
             <textarea class="form-control" name="conteudo" id="Conteudo">@pagina.Conteudo</textarea>
         </div>
