--- a/MVC_GerenciadorDeConteudo/Views/Paginas/Novo.cshtml
+++ b/MVC_GerenciadorDeConteudo/Views/Paginas/Novo.cshtml
@@ -8,8 +8,7 @@
 <div class="jumbotron">
     <h3>Páginas</h3>
     <div>
-        <button class="btn btn-default"><a href="/paginas">Voltar</a></button>
-
+        <a href="/paginas" class="btn btn-primary">Voltar</a>
     </div>
     <br />
   
